--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-    "name": "gulp-start",
-    "version": "1.0.0",
-    "description": "vestopz gulp file",
-    "main": "index.js",
-    "devDependencies": {
-        "browser-sync": "^2.26.7",
-        "del": "^5.1.0",
-        "gulp": "^4.0.2",
-        "gulp-autoprefixer": "^7.0.1",
-        "gulp-cli": "^2.3.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-rename": "^2.0.0",
-        "gulp-sass": "^4.1.0",
-        "gulp-uglify": "^3.0.2",
-        "normalize.css": "^8.0.1",
-        "wow.js": "^1.2.2",
-        "animate.css": "^4.1.0",
-    },
-    "dependencies": {
-        "magnific-popup": "^1.1.0",
-        "slick-carousel": "^1.8.1",
-            },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "JaVoHiR",
-    "license": "ISC"
+  "name": "gulp-setup",
+  "version": "1.0.0",
+  "license": "ISC",
+  "author": "JaVoHiR",
+  "description": "Compile SCSS with Autoprefixer and live watch, minify js and css",
+  "main": "index.js",
+  "devDependencies": {
+    "animate.css": "^4.1.0",
+    "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
+    "normalize.css": "^8.0.1",
+    "wow.js": "^1.2.2"
+  },
+  "dependencies": {
+    "fullpage.js": "^3.0.9",
+    "magnific-popup": "^1.1.0",
+    "slick-carousel": "^1.8.1"
+  },
+  "browserslist": [
+    "> .5%"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/vestop/gulp-setup.git"
+  }
 }
