--- a/package.json
+++ b/package.json
@@ -1,34 +1,52 @@
 {
-  "name": "gulp-setup",
-  "version": "1.0.0",
-  "license": "ISC",
-  "author": "JaVoHiR",
-  "description": "Compile SCSS with Autoprefixer and live watch, minify js and css",
-  "main": "index.js",
-  "devDependencies": {
-    "animate.css": "^4.1.0",
-    "browser-sync": "^2.26.7",
-    "del": "^5.1.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-cli": "^2.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-uglify": "^3.0.2",
-    "normalize.css": "^8.0.1",
-    "wow.js": "^1.2.2"
+  "private": true,
+  "homepage": "https://vestop.github.io/repo-name",
+  "scripts": {
+    "start": "gulp",
+    "stylelint": "stylelint \"src/**/*.scss\"",
+    "lint": "stylelint \"src/**/*.scss\" --syntax scss",
+    "fix": "stylelint \"src/**/*.scss\" --syntax scss --fix",
+    "deploy": "gh-pages -d dist"
   },
-  "dependencies": {
-    "fullpage.js": "^3.0.9",
-    "magnific-popup": "^1.1.0",
-    "slick-carousel": "^1.8.1"
-  },
-  "browserslist": [
-    "> .5%"
-  ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/vestop/gulp-setup.git"
+    "url": "https://github.com/vestop/repo.git"
+  },
+  "license": "MIT",
+  "browserslist": [
+    "last 2 version",
+    "not dead",
+    "not ie <= 11",
+    "iOS >= 12"
+  ],
+  "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "browser-sync": "^2.26.13",
+    "gh-pages": "^3.1.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-svgstore": "^7.0.1",
+    "gulp-uglify": "^3.0.2",
+    "npm-check-updates": "^9.2.3",
+    "postcss": "^8.1.4",
+    "postcss-csso": "^5.0.0",
+    "prettier": "^2.1.2",
+    "stylelint": "^13.8.0",
+    "stylelint-config-airbnb": "0.0.0",
+    "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "^1.1.2",
+    "stylelint-scss": "^3.18.0"
+  },
+  "dependencies": {
+    "focus-visible": "^5.2.0",
+    "gulp": "^4.0.2"
   }
 }
